--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,1 @@
-html,
-body {
-  margin: 0;
-  padding: 0;
-  background-color: black;
-  font-family: Arial, Helvetica, sans-serif;
-  color: white;
-}
+/* You can add global styles to this file, and also import other style files */
