--- a/src/app/image-drop/image-drop.component.css
+++ b/src/app/image-drop/image-drop.component.css
@@ -1,27 +1,25 @@
 .main {
   background-color: purple;
   width: 100%;
-  height: 66.64vw;
   background-image: url("/assets/backgroundPC.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-color: black;
   position: relative;
   display: grid;
+  overflow:hidden;
+  z-index: 0;
+}
+.line {
+  width: 90%;
+  height: 3px;
+  background-color: white;
+  margin: auto;
+  margin-bottom: 20px;
 }
 
-.timeline {
-  background-color: aqua;
-  z-index: 1;
-  position: relative;
-  width: 100%;
-  height: calc(100vh - 66vw);
-  text-align: center;
-  padding: 10px;
-}
-
-.selectedImage {
-  width: 80%;
+button {
+  margin: 2.5%;
 }
 
 .imageArt {
@@ -34,20 +32,22 @@
   animation-duration: 20s;
   cursor: pointer;
 }
-@media only screen and (min-width: 600px) {
-  .imageArt {
-    width: 20%;
-  }
-  /* mobile only */
-  .timeline {
-    display: none;
-  }
+
+.selectedImage {
+  width: 80%;
+  object-fit:scale-down;
+  cursor: pointer;
 }
-@media only screen and (max-width: 600px) {
-  .imageArt {
-    width: 30%;
-  }
+
+.cancel {
+  cursor: pointer;
+  padding-bottom: 5vh;
+  padding-top: 5vh;
+  padding-left: 70%;
+  font-size: 50px;
 }
+
+/* animation */
 
 @keyframes dropdown {
   0% {
@@ -66,5 +66,55 @@
   100% {
     opacity: 0;
     top: 120%;
+  }
+}
+
+.timeline {
+  background-color: black;
+  color: white;
+  z-index: 1;
+  text-align: center;
+  position: relative;
+  width: 100%;
+}
+
+/* pc */
+@media only screen and (min-width: 600px) {
+  .imageArt {
+    width: 20%;
+  }
+  .timeline {
+    position:fixed;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.75);;
+  }
+  .main {
+  height: 100vh;
+  }
+
+  .selectedImage {
+    height: 60vh;
+    width: 60%;
+    margin-left: 20%;
+    margin-right: 20%;
+  }
+}
+/* mobile */
+@media only screen and (max-width: 600px) {
+
+  .timeline {
+    height: 64.5vh;
+    padding-top: 20px;
+  }
+
+  .imageArt {
+    width: 30%;
+  }
+  .main {
+  height: 33vh;
+  }
+
+  .selectedImage {
+    height: 40vh;
   }
 }
