--- a/src/app/image-drop/image-drop.component.css
+++ b/src/app/image-drop/image-drop.component.css
@@ -18,6 +18,17 @@
   margin-bottom: 20px;
 }
 
+.killCounter {
+  position: fixed;
+  z-index: 1;
+  color: white;
+  background-color: black;
+  border-bottom: solid 2px;
+  border-right: solid 2px;
+  border-color: white;
+  padding: 5px;
+}
+
 button {
   margin: 2.5%;
 }
@@ -105,6 +116,8 @@ button {
   .timeline {
     height: 64.5vh;
     padding-top: 20px;
+    position: fixed;
+    margin-top: 33vh;
   }
 
   .imageArt {
@@ -112,6 +125,7 @@ button {
   }
   .main {
   height: 33vh;
+  margin-bottom: 64.5vh;
   }
 
   .selectedImage {
