--- a/src/app/image-drop/image-drop.component.css
+++ b/src/app/image-drop/image-drop.component.css
@@ -86,6 +86,12 @@ button {
   cursor: pointer;
 }
 
+.activeBorder {
+  border-radius: 25px;
+  border: 5px solid black;
+  background-color: white;
+}
+
 .selectedImage {
   width: 80%;
   height: 60vh;
@@ -139,6 +145,7 @@ button {
 
   .selectedImage {
     height: 30vh;
+    margin-bottom: 5vh;
   }
 
   .pfp {
@@ -155,7 +162,7 @@ button {
   }
 
   10% {
-    top: -20%;
+    top: -30%;
   }
 
   99% {
